test-suite/output/ErrorInModule.out
File "./output/ErrorInModule.v", line 3, characters 20-31:
Error: The reference nonexistent was not found in the current environment.

