test-suite/output/ErrorInModule.v
(* -*- mode: coq; coq-prog-args: ("-vio") -*- *)
Module M.
  Fail Definition foo := nonexistent.
End M.
